main.css
img {
  max-width: 100%;
}

footer {
  padding-right: 50px;
}

.name-link-style {
  float: left;
}

.skills-link-style {
  float: right;
}

.projects-link-style {
  float: right;
}

.about-link-style {
  float: right;
}

.foot-fonts {
  text-align: center;
  color: #395670;
  font-size: 20px;
  padding-top: 5%;
  padding-bottom: 5%;
  letter-spacing: 10px;
}

/*Spacing between social icons*/
i + i {
  margin-left: 10px;
}

.about-background {
  width: 100%;
  height: 750px;
}

.skills-row {
  width: 100%;
  background-color: #395670;
  height: 850px;
  /*margin: 5% 0 5% 0;*/
}


.skills-row-top {
  background-color: #395670;
  height: 125px;
}

.projects-row {
  background-color: #ffffff;
}

.skills-container {
  padding-top: 4%;
}

.project-images-row {
    background-color: #ffffff;
    padding-top: 3%;
    padding-bottom: 5%;
}

.navbar-brand, .active, p {
  font-family: 'Raleway', sans-serif;
}

.headings {
  font-family: 'Raleway', sans-serif;
  text-align: center;
  color: #ffffff;
  font-size: 45px;
  letter-spacing: 4px;
  padding-top: 2%;
}

.headings-projects {
  font-family: 'Raleway', sans-serif;
  text-align: center;
  color: #395670;
  font-size: 45px;
  letter-spacing: 4px;
  padding-top: 2%;
}

.skill-logo {
  font-family: 'Raleway', sans-serif;
  text-align: center;
  color: #ffffff;
  font-size: 15px;
}

.container-fluid {
  /*position: relative;
  display: block;*/
}

.profile-pic {
  left: 28%;
  right: 28%;
  top: 10%;
  bottom: 35%;
  position: absolute;
  width: 350px;
}

.about-me {
  left: 23%;
  right: 23%;
  top: 60%;
  bottom: 15%;
  position: absolute;
  width: 500px;
  background-color: #395670;
  padding: 12px 15px;
  color: white;
  border-radius: 5px;
}

.icon-jquery,
.icon-html5-alt,
.icon-git,
.icon-css3-alt,
.icon-ruby-on-rails,
.icon-ruby,
.icon-postgres,
.icon-javascript-alt,
.icon-mongodb,
.icon-python {
  font-size: 65px;
  color: #ffffff;
}

.icon-bootstrap {
  font-size: 60px;
  color: #ffffff;
}

.project-fonts {
  color: #395670;
  letter-spacing: 2px;
  text-align: center;
  align-items: center;
}

.items-center {
  margin: auto;
  max-width: 400px;
  min-width: 250px;
}
/*.col-sm-4 {
  text-align: center;
}*/

.invisible {
  color: white;
}

/*.navbar-right {
  padding-right: 20px;
}*/

.project-image {
  max-height: 300px;
  min-height: 200px;
}

.project-text {
  align-content: center;
  text-align: left;
  font-size: 12px;
  max-width: 400px;
  min-width: 250px;
}

.project-title {
  font-size: 20px;
  text-align: center;
}

.header-nav {
  overflow: hidden;
  background-color: white;
  position: fixed;
  margin-top: 0;
  width: 100%;
  height: 50px;
}

.header-nav a{
  display: block;
  text-align: center;
  padding: 14px 16px;
  text-decoration: none;
  font-size: 17px;
}

